# OptionalStruct

./: Cargo.toml  README.md
examples/: clap.rs
optional_struct_macro/src/: opt_struct.rs  test.rs
