[package]
name = "optional_struct"
version = "0.5.2"
authors = ["Paul Lesur <github@lesurp.fr>"]
description = """
Crate defining a macro that will generate, from a structure, another structure with only Option<T> fields
"""
readme = "README.md"
categories = ["config"]
keywords = ["macro", "configuration"]
license = "Apache-2.0"
repository = "https://github.com/lesurp/OptionalStruct"
edition = '2021'

[dependencies]
optional_struct_macro.workspace = true
serde = { workspace = true, features = ["derive"], default-features = false }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "std"] }
serde_json.workspace = true
